--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <title>Isabella Schlemper</title>
     <style>
-        body {
-            font-family: Arial, Helvetica, sans-serif, sans-serif;
-            background-color: #d8b6e1;
+       body {
+            font-family: Arial, sans-serif;
+            background-image: url("https://i.pinimg.com/originals/81/d2/e5/81d2e5f7453fcc26d4dcf0a92a5b9a50.gif");
+            background-size: cover;
+            background-position: center;
             margin: 0;
             padding: 0;
         }
