--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <style>
        body {
             font-family: Arial, sans-serif;
-            background-image: url("https://i.pinimg.com/originals/81/d2/e5/81d2e5f7453fcc26d4dcf0a92a5b9a50.gif");
+            background-image: url("https://i.pinimg.com/originals/61/e0/92/61e092fde345ba8baf04be9dfbdba63a.gif");
             background-size: cover;
             background-position: center;
             margin: 0;
             padding: 0;
         }
         #header {
-            background-color: #ffffff;
+            background-color: #3058db;
             color: #000000;
             text-align: center;
             padding: 20px;
@@ -39,7 +39,199 @@
         <h1>Isabella Schlemper</h1>
     </div>
     <div id="main-content">
-        <img id="profile-image" src="https://scontent.ffln2-3.fna.fbcdn.net/v/t39.30808-6/443716074_7131619703611332_7470367125111414331_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=5f2048&_nc_ohc=YLtsyaVVRDwQ7kNvgHGhyX2&_nc_ht=scontent.ffln2-3.fna&oh=00_AYAfGe0tbIKWODzdDjefji476iwkcgY-FPpWUmbXSCypuw&oe=665141E7" alt="Foto de Perfil">
+        <img id="profile-image" src="https://media-gru1-1.cdn.whatsapp.net/v/t61.24694-24/430439113_1409510086391390_3873636575057328553_n.jpg?ccb=11-4&oh=01_Q5AaIPc8b_5WyZ3J9n3xdujTvmskfm2qJ0ivKztTzm25Qaxy&oe=66642137&_nc_sid=e6ed6c&_nc_cat=103" alt="Foto de Perfil">
+        <div></div>
+        <h2>Dados Pessoais:</h2>
+        <p>Nome: Isabella Schlemper</p>
+        <p>E-mail: isabella.bernardo@aluno.fmpsc.edu.br</p>
+        <p>Telefone: (48) 99821-0879</p>
+
+        <h2>Experiência Profissional:</h2>
+        <p>Atendente em Speed Informática • 2017 - 2018</p>
+        <p>Jovem Aprendiz (Marketing) em Leonora • 2019 - 2020</p>
+        <p>Estágio (Design) em ADVB/SC • 2020 - 2022</p>
+        <p>Autônoma (Marketing/Design) • 2020 - atualmente</p>
+
+        <h2>Formação Acadêmica:</h2>
+        <p>Curso: Publicidade e Propaganda</p>
+        <p>Instituição: Anhanguera Educacional</p>
+        <p>Ano de Conclusão: 2021</p>
+
+        <p>Curso: ADS - Análise e Desenvolvimento de sistemas</p>
+        <p>Instituição: Fuldade Municipal De Palhoça</p>
+        <p>Ano de Conclusão: 2026</p>
+    </div>
+</body>
+</html><!DOCTYPE html>
+<html>
+<head>
+    <title>Isabella Schlemper</title>
+    <style>
+       body {
+            font-family: Arial, sans-serif;
+            background-image: url("https://i.pinimg.com/originals/61/e0/92/61e092fde345ba8baf04be9dfbdba63a.gif");
+            background-size: cover;
+            background-position: center;
+            margin: 0;
+            padding: 0;
+        }
+        #header {
+            background-color: #3058db;
+            color: #000000;
+            text-align: center;
+            padding: 20px;
+        }
+
+
+        #profile-image {
+            width: 2in;
+            height: 2in;
+            border-radius: 0;
+            display: block;
+            margin: 0 auto 20px auto; /* Espaço de uma linha abaixo da imagem */
+            object-fit: cover;
+        }
+
+
+        #main-content {
+            padding: 20px;
+        }
+    </style>
+</head>
+<body>
+    <div id="header">
+        <h1>Isabella Schlemper</h1>
+    </div>
+    <div id="main-content">
+        <img id="profile-image" src="https://media-gru1-1.cdn.whatsapp.net/v/t61.24694-24/430439113_1409510086391390_3873636575057328553_n.jpg?ccb=11-4&oh=01_Q5AaIPc8b_5WyZ3J9n3xdujTvmskfm2qJ0ivKztTzm25Qaxy&oe=66642137&_nc_sid=e6ed6c&_nc_cat=103" alt="Foto de Perfil">
+        <div></div>
+        <h2>Dados Pessoais:</h2>
+        <p>Nome: Isabella Schlemper</p>
+        <p>E-mail: isabella.bernardo@aluno.fmpsc.edu.br</p>
+        <p>Telefone: (48) 99821-0879</p>
+
+        <h2>Experiência Profissional:</h2>
+        <p>Atendente em Speed Informática • 2017 - 2018</p>
+        <p>Jovem Aprendiz (Marketing) em Leonora • 2019 - 2020</p>
+        <p>Estágio (Design) em ADVB/SC • 2020 - 2022</p>
+        <p>Autônoma (Marketing/Design) • 2020 - atualmente</p>
+
+        <h2>Formação Acadêmica:</h2>
+        <p>Curso: Publicidade e Propaganda</p>
+        <p>Instituição: Anhanguera Educacional</p>
+        <p>Ano de Conclusão: 2021</p>
+
+        <p>Curso: ADS - Análise e Desenvolvimento de sistemas</p>
+        <p>Instituição: Fuldade Municipal De Palhoça</p>
+        <p>Ano de Conclusão: 2026</p>
+    </div>
+</body>
+</html><!DOCTYPE html>
+<html>
+<head>
+    <title>Isabella Schlemper</title>
+    <style>
+       body {
+            font-family: Arial, sans-serif;
+            background-image: url("https://i.pinimg.com/originals/61/e0/92/61e092fde345ba8baf04be9dfbdba63a.gif");
+            background-size: cover;
+            background-position: center;
+            margin: 0;
+            padding: 0;
+        }
+        #header {
+            background-color: #3058db;
+            color: #000000;
+            text-align: center;
+            padding: 20px;
+        }
+
+
+        #profile-image {
+            width: 2in;
+            height: 2in;
+            border-radius: 0;
+            display: block;
+            margin: 0 auto 20px auto; /* Espaço de uma linha abaixo da imagem */
+            object-fit: cover;
+        }
+
+
+        #main-content {
+            padding: 20px;
+        }
+    </style>
+</head>
+<body>
+    <div id="header">
+        <h1>Isabella Schlemper</h1>
+    </div>
+    <div id="main-content">
+        <img id="profile-image" src="https://media-gru1-1.cdn.whatsapp.net/v/t61.24694-24/430439113_1409510086391390_3873636575057328553_n.jpg?ccb=11-4&oh=01_Q5AaIPc8b_5WyZ3J9n3xdujTvmskfm2qJ0ivKztTzm25Qaxy&oe=66642137&_nc_sid=e6ed6c&_nc_cat=103" alt="Foto de Perfil">
+        <div></div>
+        <h2>Dados Pessoais:</h2>
+        <p>Nome: Isabella Schlemper</p>
+        <p>E-mail: isabella.bernardo@aluno.fmpsc.edu.br</p>
+        <p>Telefone: (48) 99821-0879</p>
+
+        <h2>Experiência Profissional:</h2>
+        <p>Atendente em Speed Informática • 2017 - 2018</p>
+        <p>Jovem Aprendiz (Marketing) em Leonora • 2019 - 2020</p>
+        <p>Estágio (Design) em ADVB/SC • 2020 - 2022</p>
+        <p>Autônoma (Marketing/Design) • 2020 - atualmente</p>
+
+        <h2>Formação Acadêmica:</h2>
+        <p>Curso: Publicidade e Propaganda</p>
+        <p>Instituição: Anhanguera Educacional</p>
+        <p>Ano de Conclusão: 2021</p>
+
+        <p>Curso: ADS - Análise e Desenvolvimento de sistemas</p>
+        <p>Instituição: Fuldade Municipal De Palhoça</p>
+        <p>Ano de Conclusão: 2026</p>
+    </div>
+</body>
+</html><!DOCTYPE html>
+<html>
+<head>
+    <title>Isabella Schlemper</title>
+    <style>
+       body {
+            font-family: Arial, sans-serif;
+            background-image: url("https://i.pinimg.com/originals/61/e0/92/61e092fde345ba8baf04be9dfbdba63a.gif");
+            background-size: cover;
+            background-position: center;
+            margin: 0;
+            padding: 0;
+        }
+        #header {
+            background-color: #3058db;
+            color: #000000;
+            text-align: center;
+            padding: 20px;
+        }
+
+
+        #profile-image {
+            width: 2in;
+            height: 2in;
+            border-radius: 0;
+            display: block;
+            margin: 0 auto 20px auto; /* Espaço de uma linha abaixo da imagem */
+            object-fit: cover;
+        }
+
+
+        #main-content {
+            padding: 20px;
+        }
+    </style>
+</head>
+<body>
+    <div id="header">
+        <h1>Isabella Schlemper</h1>
+    </div>
+    <div id="main-content">
+        <img id="profile-image" src="https://media-gru1-1.cdn.whatsapp.net/v/t61.24694-24/430439113_1409510086391390_3873636575057328553_n.jpg?ccb=11-4&oh=01_Q5AaIPc8b_5WyZ3J9n3xdujTvmskfm2qJ0ivKztTzm25Qaxy&oe=66642137&_nc_sid=e6ed6c&_nc_cat=103" alt="Foto de Perfil">
         <div></div>
         <h2>Dados Pessoais:</h2>
         <p>Nome: Isabella Schlemper</p>
